k8s/pr11_12/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: my-web-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-web-app
      tier: backend
  template:
    metadata:
      labels:
        app: my-web-app
        tier: backend
    spec:
      containers:
        - name: backend
          image: cowboymarlboro1884/simple-flask-app:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
