k8s/pr11_12/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: my-web-app
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-web-app
      tier: frontend
  template:
    metadata:
      labels:
        app: my-web-app
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
            items:
              - key: default.conf
                path: default.conf
