k8s/pr11_12/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: my-web-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: my-web-app
    tier: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
